payment platform working

--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "url": "https://github.com/walletconnect/walletconnect-example-dapp/issues"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "~1.0.0",
     "@types/eth-sig-util": "^2.1.1",
     "@walletconnect/client": "^1.7.8",
     "@walletconnect/qrcode-modal": "^1.7.8",
     "axios": "^0.25.0",
+    "babel-polyfill": "~6.26.0",
     "bignumber.js": "^9.0.1",
     "blockies-ts": "^1.0.0",
     "eth-sig-util": "^2.5.3",
     "ethereumjs-util": "^7.0.6",
     "ethers": "^5.0.17",
     "node-gyp": "^8.1.0",
+    "npm": "^8.13.1",
     "prop-types": "^15.7.2",
     "qr-image": "^3.2.0",
     "react": "^17.0.2",
